# AstroBurrito

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
doc/: diablo_pose.ppm
engine/: CMakeLists.txt
engine/src/: engine.cpp
game/: CMakeLists.txt
game/src/: main  main.cpp
libs/core/: CMakeLists.txt
libs/core/include/astro/core/camera/: PerspectiveCamera.hpp
libs/core/include/astro/core/io/: OBJFile.hpp  PPMImage.hpp  TGAImage.hpp
libs/core/include/astro/core/platform/: IPlatformLayer.hpp  LayerConfig.hpp  PlatformFactory.hpp  X11Layer.hpp
libs/core/src/platform/: X11Layer.cpp
libs/core/tests/: X11Layer_tests.cpp
libs/graphics/: CMakeLists.txt
libs/graphics/include/astro/graphics/: graphics.hpp
libs/graphics/src/: graphics.cpp
libs/graphics/tests/: graphics_tests.cpp
libs/math/: CMakeLists.txt
libs/math/include/astro/math/: math.hpp
libs/math/src/: math.cpp
libs/math/tests/: math_tests.cpp
libs/test/: astro_test.hpp
